# pico-bridge-firmware

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  git_hash.py  include-dirs  pico_robot_config.h.in  readme.save.md  robot.todo
apps/bridge/: CMakeLists.txt  bridge.cpp  version_template.h.in
apps/bridge_with_samples/: CMakeLists.txt  bridge_with_samples.cpp
apps/closed_loop/: CMakeLists.txt  closed_loop.cpp
apps/debug-blinky/: CMakeLists.txt  debug_blinky.cpp
apps/helloworld/serial/: hello_serial.c
apps/test01/: CMakeLists.txt
apps/test_cli/: CMakeLists.txt  clitest.cpp  command_test.cpp
apps/test_command/: CMakeLists.txt
apps/test_irq/: pico_sdk_interrupt_test.cpp  test_irq.cpp
apps/test_micros_timing/: CMakeLists.txt  micros_timing.cpp
apps/test_motion/: CMakeLists.txt  exercise_motors.cpp  exercise_motors.h  motion_test.cpp
apps/test_motor/: CMakeLists.txt  motor_test.cpp
apps/test_serial_ports/: CMakeLists.txt  test_stdio_uart0.cpp  test_stdio_usb.cpp  test_uart0.cpp  test_uart1.cpp
apps/test_transport/: CMakeLists.txt  test_transport.cpp
apps/test_uart/: CMakeLists.txt  test.cpp
src/bridge/: CMakeLists.txt  bridge.cpp
src/common/: cli.cpp  cli.h  commands.cpp  commands.h  config.h  dri0002.cpp  dri0002.h  encoder.cpp  encoder.h  encoder_old.cpp  encoder_sample.cpp  encoder_sample.h  encoder_v2.cpp  encoder_v2.h  enum.cpp  enum.h  motion.cpp  motion.h  old-motion.h  pico_gpio_irq_dispatcher.cpp  pid.cpp  pid.h  remote_pid.h  reporter.cpp  reporter.h  robot.cpp  robot.h  task.h  trace.cpp  trace.h  transport.cpp  transport.h  utils.cpp  utils.h  version.h
src/common/cli/: argv.cpp  argv.h  commands.cpp  commands.h  execute_commands.cpp  execute_commands.h
src/common/junk/: encoder_message.h  log.h  motion_publisher.cpp  motion_publisher.h  motor.cpp  motor.h  motor_exp_02.ino  motor_exp_02.ino-saved  pico_pwm.h  serial_writer.h
src/common/transport/: buffers.cpp  buffers.h  static_buffers.cpp  static_buffers.h  transmit_buffer_pool.cpp  transmit_buffer_pool.h  transport.cpp  transport.h  transport_reader.cpp
src/debug-blinky/: CMakeLists.txt
src/helloworld/serial/: CMakeLists.txt
src/helloworld/usb/: CMakeLists.txt
src/onboard_pid/: CMakeLists.txt  main.cpp
src/test01/: CMakeLists.txt  test.cpp
src/test_cli/: CMakeLists.txt  clitest.cpp  proof_of_concept.cpp
src/test_command/: CMakeLists.txt  test_02_command.cpp  test_command.cpp
src/test_irq/: CMakeLists.txt  test_irq.cpp
src/test_micros_timing/: CMakeLists.txt  micros_timing.cpp
src/test_motion/: CMakeLists.txt
src/test_motor/: CMakeLists.txt  motor_test.cpp
src/test_serial_ports/: test_uart0_uart1.cpp
src/test_trace/: CMakeLists.txt  test_uart_trace.cpp
src/test_transport/: CMakeLists.txt
src/test_uart/: CMakeLists.txt  readme.md
tests_local/: CMakeLists.txt
tests_local/test_main_loop/: CMakeLists.txt  test_main.cpp
tests_local/test_static_buffer_cpp/: CMakeLists.txt  test_static_buffers_cpp.cpp
tests_local/test_static_buffer_cpp/old/: static_buffers.h  transmit_buffer_pool.h
tests_local/tests_local_c_only/: c_buffer_pool.h  c_static_buffers.c  c_static_buffers.h
tests_local/tests_local_cppxxx/: test_main.cpp
tests_local/tests_local_cppxxx/old/: transmit_buffer_pool.cpp
tests_local_c_only/: c_buffer_pool.h  c_static_buffers.c
tests_on_hosts/: CMakeLists.txt
tests_on_hosts/common/: unittest.c
tests_on_hosts/test_main_loop/: CMakeLists.txt  test_main.cpp
tests_on_hosts/test_static_buffer_cpp/: CMakeLists.txt  test_static_buffers_cpp.cpp
tests_on_hosts/test_static_buffer_cpp/old/: static_buffers.cpp
tests_on_hosts/test_with_pico/: .json.txt.swp  CMakeLists.txt
tests_on_hosts/tests_local_c_only/: c_buffer_pool.h  c_static_buffers.h  transmit_buffer_pool.h
tests_on_hosts/tests_local_cppxxx/: CMakeLists.txt  test_main.cpp
tests_on_hosts/tests_local_cppxxx/old/: static_buffers.h  transmit_buffer_pool.cpp
xxtests_local_cpp/old/: static_buffers.cpp
