# cmake_minimum_required(VERSION 3.13)
# include(pico_sdk_import.cmake)
# project(test_project)
# pico_sdk_init()

add_executable(test_uart test.cpp)
pico_enable_stdio_usb(test_uart 1)
pico_enable_stdio_uart(test_uart 0)
pico_add_extra_outputs(test_uart)
target_link_libraries(test_uart pico_stdlib pico_unique_id)